@@ -85,6 +85,7 @@ def parse_logfile (fn):
 			global_info['FontBBox'] = '0 0 1000 1000'
 			global_info['Ascender'] = '0'
 			global_info['Descender'] = '0'
+			global_info['EncodingScheme'] = 'FontSpecific'
 	
 	return (global_info, charmetrics, deps)
 
@@ -114,7 +115,7 @@ Comment Automatically generated by mf-to-table.py
 	for m in charmetrics:
 		write_afm_char_metric (file,m)
 	file.write ('EndCharMetrics\n')
-	file.write ('EndFontMetrics %d\n')
+	file.write ('EndFontMetrics\n')
 
 
 def write_tex_defs (file, global_info, charmetrics):
